@@ -99,7 +99,7 @@ public:
     */
    virtual bool config(jccl::ConfigElementPtr element);
 
-   virtual std::string getBaseType()
+   virtual std::string getInputTypeName()
    {
        return std::string("SimInput");
    }
